// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCard Component should render a non-connected component: non-connected 1`] = `
<GraphCard
  cardTitle={null}
  error={false}
  getGraphReportsCapacity={[Function]}
  graphData={Object {}}
  isDisabled={false}
  meta={Object {}}
  pending={false}
  useProduct={[Function]}
  useProductGraphConfig={[Function]}
  useProductGraphTallyQuery={[Function]}
>
  <Card
    className="curiosity-usage-graph"
  >
    <article
      className="pf-c-card curiosity-usage-graph"
      data-ouia-component-id="OUIA-Generated-Card-1"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe={true}
      id=""
    >
      <MinHeight
        key="headerMinHeight"
        minHeight={0}
        updateOnContent={false}
        updateOnResize={true}
      >
        <div
          className="curiosity-minheight"
        >
          <div>
            <CardHeader>
              <div
                className="pf-c-card__header"
              >
                <CardTitle>
                  <div
                    className="pf-c-card__title"
                  >
                    <Title
                      headingLevel="h2"
                      size="lg"
                    >
                      <h2
                        className="pf-c-title pf-m-lg"
                        data-ouia-component-id="OUIA-Generated-Title-1"
                        data-ouia-component-type="PF4/Title"
                        data-ouia-safe={true}
                      />
                    </Title>
                  </div>
                </CardTitle>
                <CardActions
                  className=""
                >
                  <div
                    className="pf-c-card__actions"
                  />
                </CardActions>
              </div>
            </CardHeader>
          </div>
        </div>
      </MinHeight>
      <MinHeight
        key="bodyMinHeight"
        minHeight={0}
        updateOnContent={false}
        updateOnResize={true}
      >
        <div
          className="curiosity-minheight"
        >
          <div>
            <CardBody>
              <div
                className="pf-c-card__body"
              >
                <div
                  className=""
                >
                  <GraphCardChart
                    graphData={Object {}}
                    useProductGraphConfig={[Function]}
                    useProductGraphTallyQuery={[Function]}
                  >
                    <Chart
                      chartLegend={[Function]}
                      chartTooltip={[Function]}
                      dataSets={Array []}
                      key="chart_{}"
                      padding={
                        Object {
                          "bottom": 75,
                          "left": 55,
                          "right": 55,
                          "top": 50,
                        }
                      }
                      themeColor="blue"
                      xAxisChartLabel={null}
                      xAxisFixLabelOverlap={true}
                      xAxisLabelIncrement={1}
                      xAxisTickFormat={[Function]}
                      xValueFormat={null}
                      yAxisChartLabel={null}
                      yAxisTickFormat={[Function]}
                      yValueFormat={null}
                    >
                      <div
                        className="curiosity-chartarea uxui-curiosity__modal uxui-curiosity__modal--loading"
                        id="curiosity-chartarea"
                      />
                    </Chart>
                  </GraphCardChart>
                </div>
              </div>
            </CardBody>
          </div>
        </div>
      </MinHeight>
    </article>
  </Card>
</GraphCard>
`;

exports[`GraphCard Component should render multiple states: error state 1`] = `
<Card
  className="curiosity-usage-graph"
>
  <MinHeight
    key="headerMinHeight"
    minHeight={0}
    updateOnContent={false}
    updateOnResize={true}
  >
    <CardHeader>
      <CardTitle>
        <Title
          headingLevel="h2"
          size="lg"
        />
      </CardTitle>
      <CardActions
        className="blur"
      />
    </CardHeader>
  </MinHeight>
  <MinHeight
    key="bodyMinHeight"
    minHeight={0}
    updateOnContent={false}
    updateOnResize={true}
  >
    <CardBody>
      <div
        className="blur"
      >
        <GraphCardChart
          graphData={
            Object {
              "physicalSockets": Array [
                Object {
                  "date": 2019-06-01T00:00:00.000Z,
                  "x": 0,
                  "y": 10,
                },
                Object {
                  "date": 2019-06-08T00:00:00.000Z,
                  "x": 1,
                  "y": 12,
                },
                Object {
                  "date": 2019-06-25T00:00:00.000Z,
                  "x": 2,
                  "y": 3,
                },
              ],
            }
          }
          useProductGraphConfig={[Function]}
          useProductGraphTallyQuery={[Function]}
        />
      </div>
    </CardBody>
  </MinHeight>
</Card>
`;

exports[`GraphCard Component should render multiple states: pending state 1`] = `
<Card
  className="curiosity-usage-graph"
>
  <MinHeight
    key="headerMinHeight"
    minHeight={0}
    updateOnContent={false}
    updateOnResize={true}
  >
    <CardHeader>
      <CardTitle>
        <Title
          headingLevel="h2"
          size="lg"
        />
      </CardTitle>
      <CardActions
        className=""
      />
    </CardHeader>
  </MinHeight>
  <MinHeight
    key="bodyMinHeight"
    minHeight={0}
    updateOnContent={false}
    updateOnResize={true}
  >
    <CardBody>
      <div
        className="fadein"
      >
        <Loader
          skeletonProps={
            Object {
              "size": "sm",
            }
          }
          tableProps={Object {}}
          variant="graph"
        />
      </div>
    </CardBody>
  </MinHeight>
</Card>
`;

exports[`GraphCard Component should return an empty render when disabled: disabled component 1`] = `""`;
